tests/tests/snapshots/integration__run_images@isosceles_triangle1.gleam.snap
---
source: tests/tests/integration.rs
expression: "format!(\"{out}\")"
input_file: tests/tests/images/isosceles_triangle1.gleam
---
<svg width="399.0" height="18.0" xmlns="http://www.w3.org/2000/svg">
  <path d="M 398.477879 17.431149 L 199.23894 0.0 L 0.0 17.431149 Z" fill="rgba(46, 139, 87, 1.0)" />
</svg>
